[package]
name = "rtree"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
strum = "0.25"
strum_macros = "0.25"
serde = { version = "1.0.183", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
reqwest-wasm = "0.11.16"
base64 = "0.21.2"
wasm-bindgen = "0.2.87"
rayon = "1.1.0"
rayon-core = "1.5.0"
futures = "0.3"
wasm-bindgen-rayon = "1.0"
wasm-bindgen-futures = "0.4.37"
serde_json = "1.0"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Worker',
  'DedicatedWorkerGlobalScope',
  'console',
]
